examples/bad/wrong-number-of-arguments.elina
fn f(argument1: int, argument2: int): int {
  return 1;
}

fn main(): void {
  var x: int = f(1);
}